# canvas_grit_automation

./: .envrc  .gitignore  .rtx.toml  LICENSE  README.md  canvas_grit_sync.service  canvas_grit_sync.timer  docker-compose.yml  docker_wrapper.sh  env.example  example_config.toml  flake.nix  grit_export_server.service  jsonschema-4.21.1-py3-none-any.whl  justfile  pyproject.toml  referencing-0.34.0-py3-none-any.whl  rpds_py-0.18.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
configs/: .gitignore  example_forward_config.toml  example_logging_config.json  example_sync_config.toml  export_server_config.toml
docs/: Build Systems.md  Modules.md  Nix Installation.md  build_systems.md  canvas_group_creation.md  lookback.md  modules.md  python_installation.md  script_configuration.md  sync.md  sync_configuration.md
export/: __init__.py  __main__.py  _config.py  messaging.py
export_server/: __init__.py  __main__.py
forward/: __init__.py  __main__.py  _config.py
jsonl_formatter/: __init__.py
logs/: 2024_02_16.txt
services/: canvas_grit_sync.service  filebrowser.service  grit_export_server.service
src/export_server/: __init__.py
src/machine_shop/: __init__.py  __main__.py  df_operations.py  env.py
src/sync/: __init__.py  __main__.py
sync/: __init__.py  __main__.py  _canvas.py  _config.py  _grit.py  env.py
