[tool.poetry]
name = "machine-shop"
version = "0.1.0"
description = ""
authors = [
    "David Krauthamer <dkrautha@pm.me>",
    "Theodore Rogalski <rogalski.theo@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "sync" }, { include = "jsonl_formatter" }]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.7"
canvasapi = "^3.2.0"
requests = "^2.32.4"
Flask = "^3.0.2"
xlsx2csv = "^0.8.2"
apscheduler = "^3.10.4"
pydantic = "^2.6.4"
bidict = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.1"

[tool.poetry.scripts]
sync = "sync:main"

[tool.ruff]
lint.select = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
